# jarvis

./: .claudeignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  FEATURES.md  MASTER_FEATURES.md  README.md  config.py  main.py  pyproject.toml  requirements.txt  telegram_bridge.py  test_imports.py  version.py
audio/: recorder.py  stt.py  stt_advanced.py  tts.py  tts_elevenlabs.py  wake_word.py
core/: api_manager.py  conversation.py  custom_commands.py  error_log.py  orchestrator.py  profile.py  self_evolution.py  skills.py  stats.py  tool_registry.py
data/: profile.json  skills.json  stats.json
memory/: README.md  extractor.py  long_term.py  mem_cache.py  mem_db.py  patterns.py  session.json  short_term.py  task_memory.py  ultron_memory.db  ultron_memory.db.backup  user_profiles.json
projects/chess-engine/: index.html  package.json  vite.config.ts
projects/chess-engine/src/: App.tsx  index.css  index.tsx
scripts/: test_audio.py
tools/: ai_detection.py  app_control.py  books.py  browser.py  clipboard_mgr.py  file_ops.py  file_organizer.py  image_tools.py  n8n_bridge.py  os_control.py  research.py  scheduler.py  scholar.py  search.py  system_info.py  timer.py  todo.py  video_gen.py  wiki.py  youtube.py
