[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai"
version = "1.2.0"
description = "Jarvis — Iron Man AI assistant"
authors = [{name = "Moez"}]
requires-python = ">=3.10"

[project.scripts]
jarvis = "main:main"

[tool.setuptools]
py-modules = ["main", "config", "version", "telegram_bridge"]
packages = ["core", "audio", "memory", "tools"]
